# BashGPT

./: .gitignore  AGENTS.md  README.md  bash.py  bash_mode.txt  chat.py  db_and_key.py  defaults.json  dp  extract_text.py  get_file.py  history.db  main.py  models.json  modes.json  modes.py  modes_and_models.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  setup_db_and_key.py  test.py  util_functions.py  whisper.py
bashgpt/: main.py  whisper.py
bashgpt_ptrglbvc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/bashgpt/: api.py  autonomous.py  bash.py  chat.py  dalle.py  data_loader.py  db_and_key.py  defaults.json  extract_text.py  get_file.py  load_defaults.py  main.py  models.json  modes.json  path.py  providers.json  server.py  util_functions.py
src/bashgpt/html/: chat.html  chats.html  home.html  layout.html
src/bashgpt/static/css/: style.css
src/bashgpt/static/js/: commands.js
src/bashgpt_ptrglbvc/: get_file.py  history.db  main.py  util_functions.py  whisper.py
src/bashgpt_ptrglbvc.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
